# wlroots

./: meson.build  meson_options.txt
backend/: backend.c  meson.build
backend/drm/: atomic.c  backend.c  drm.c  legacy.c  properties.c  renderer.c  util.c
backend/headless/: backend.c  output.c
backend/libinput/: meson.build
backend/multi/: backend.c
backend/wayland/: backend.c  output.c
backend/x11/: backend.c  meson.build  output.c
examples/: fullscreen-shell.c  layer-surface.c  matrix.c  meson.build  output-layers.c
include/backend/: backend.h  headless.h  wayland.h  x11.h
include/backend/drm/: drm.h  renderer.h
include/render/: drm_dumb_allocator.h  gbm_allocator.h  gles2.h  pixman.h  shm_allocator.h  swapchain.h  wlr_renderer.h
include/types/: wlr_buffer.h
include/wlr/: backend.h  config.h.in
include/wlr/backend/: interface.h
include/wlr/interfaces/: wlr_output.h
include/wlr/render/: egl.h  interface.h  pixman.h  wlr_renderer.h
include/wlr/types/: wlr_buffer.h  wlr_linux_dmabuf_v1.h  wlr_output.h  wlr_output_damage.h  wlr_surface.h
protocol/: surface-layers.xml
render/: allocator.c  drm_dumb_allocator.c  egl.c  gbm_allocator.c  meson.build  shm_allocator.c  swapchain.c  wlr_renderer.c
render/gles2/: renderer.c  texture.c
render/pixman/: meson.build  pixel_format.c  renderer.c
rootston/: output.c
types/: meson.build  wlr_buffer.c  wlr_compositor.c  wlr_cursor.c  wlr_linux_dmabuf_v1.c  wlr_output.c  wlr_output_damage.c  wlr_output_layout.c  wlr_presentation_time.c  wlr_surface.c  wlr_surface_layers.c
